2006-04-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/xjt/xjt.c: undef GIMP_DISABLE_DEPRECATED to fix the
	build on IRIX MIPSpro (bug #339336).

2006-04-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gifload.c: implement a thumbnail load procedure
	that loads only the first frame of a GIF animation.

2006-04-24  DindinX  <dindinx@gimp.org>

	* plug-ins/common/redeye.c: use a zoom preview instead of a drawable
	one.

2006-04-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/redeye.c: added Redeye Removal plug-in, written
	by Robert Merkel and Andreas Røsdal. Fixes bug #91795.

2006-04-23  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/plugin-defs.pl: use PNG_CFLAGS for the png plugin.

	* plug-ins/common/Makefile.am: regenerated.

2006-04-23  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/png.c: don't use long deprecated libpng API, and
	drop support for ancient libpng versions. Fixes bug #339402.

	* configure.in: use pkg-config to detect libpng. This means we now
	require at least libpng 1.2.2, but that's over four years old, so
	that shouldn't be that big a deal.

2006-04-23  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewabledialog.c: added "viewable" as a property.

2006-04-23  Sven Neumann  <sven@gimp.org>

	* app/dialogs/module-dialog.c
	* app/dialogs/palette-import-dialog.c: use GimpDialog instead of a
	GimpViewableDialog with a NULL viewable.

	* app/widgets/gimpviewabledialog.c: deprecate use of
	GimpViewableDialog with a NULL viewable.

	* app/dialogs/resolution-calibrate-dialog.c: whitespace.

2006-04-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.[ch] (gimp_prop_scale_entry_new):
	renamed parameters to please gtk-doc.

2006-04-21  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h: minor string changes.

	* app/config/gimprc.c: declared an array as const.

	* app/dialogs/user-install-dialog.c: further streamlining of the